Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h1>
 <a id="k2s-pages-ktwo" class="anchor" href="#k2s-pages-ktwo" aria-hidden="true"><span class="octicon octicon-link"></span></a>K2's pages (ktwo)</h1>
 
-<p>My corporate account is <a href="https://github.com/ShaneK2" class="user-mention">@ShaneK2</a> where I still have a few projects coming down the pipe.  @K2/Reloc is a small one that's got the main functionality done.   I'll be moving in @ShaneK2/inVtero.net eventually, check out the <a href="http://shanek2.github.io/inVtero.net/">pages for InVtero</a> I just added Linux support using a similar technique as I did for Windows and *BSD.</p>
+<p>My corporate account is <a href="https://github.com/ShaneK2" class="user-mention">@ShaneK2</a> where I still have a few projects coming down the pipe.  <a href="https://github.com/K2/Reloc">https://github.com/K2/Reloc</a> is a small one that's got the main functionality done.   I'll be moving in @ShaneK2/inVtero.net eventually, check out the <a href="http://shanek2.github.io/inVtero.net/">pages for InVtero</a> I just added Linux support using a similar technique as I did for Windows and *BSD.  I'll take some feature requests as they come but looking to deal with dumping and artifact extraction next probably.</p>
 
 <h2>
 <a id="upcoming-stuff" class="anchor" href="#upcoming-stuff" aria-hidden="true"><span class="octicon octicon-link"></span></a>Upcoming stuff</h2>
